# DocSpeacker

./: .gitmodules  README.md  README.txt  bash_profile_osx  filelist.pri  note  root.pri
example/: exaple.pro  main.cpp
language/ara/: desired_characters.tess
language/ces/: desired_characters.tess
language/chi_sim/: desired_characters.tess
language/dan/: desired_characters.tess
language/deu/: desired_characters.tess
language/eng/: desired_characters.tess
language/fin/: desired_characters.tess
language/fra/: desired_characters.tess
language/heb/: desired_characters.tess
language/hin/: desired_characters.tess
language/hun/: desired_characters.tess
language/ind/: desired_characters.tess
language/ita/: desired_characters.tess
language/ita_old/: desired_characters.tess
language/jpn/: desired_characters.tess
language/kor/: desired_characters.tess
language/lat/: desired_characters.tess
language/nld/: desired_characters.tess
language/nor/: desired_characters.tess
language/pol/: desired_characters.tess
src/: Info.plist  Info.plist.template  Info.plist0000.template  inlinefolder.qrc  inlinefolder.rcc  mac_template.plist  main.cpp  pkginfo  rdoc.cpp  rdoc.h  re_application_setting.h  re_document_open.cpp  re_document_open.h  redoc.cpp  redoc.h  remainwin.cpp  remainwin.h  speackwindow.ui  src.pro
stressdoc/: Text_prace.doc  WG3613-WorkingWithMasterDocuments.doc  columns.rtf  demo.doc  demo.rtf  demo.txt  font_styles.rtf  simple.rtf  simple.txt  texteditoo.html
tool/: note.txt
tool/find/: CMakeLists.txt  main.cpp  pmain.cpp
(+14 files in other folders)
